K8s/Kustomize/base/sockshop/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  # annotations:
  #   prometheus.io/scrape: 'true'
  labels:
    name: payment
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    name: payment
