K8s/Kustomize/base/sockshop/payment/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-access
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payment
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: orders
      ports:
        - protocol: TCP
          port: 8080 # The target port your pod is listening on/containerPort
